--- a/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinView.template
+++ b/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinView.template
@@ -17,4 +17,5 @@ package ${common.basePackage}.ui.view;
 
 public interface VaadinView {
 	public void addFieldInitializer(FieldInitializer fieldInitializer);
+	public void buildLayout();
 }
