Pass context to views
Pass the context also to the views not only to the presenters.

--- a/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/AddViewImpl.template
+++ b/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/AddViewImpl.template
@@ -15,6 +15,7 @@ the License.
 *#
 package ${package};
 
+import java.util.Map;
 import com.vaadin.ui.AbstractOrderedLayout;
 import com.vaadin.ui.Button;
 import com.vaadin.ui.Button.ClickEvent;
@@ -36,8 +37,8 @@ public class ${bean.className}AddViewImpl extends
 	protected Button cancel = new Button();
 	protected Button save = new Button();
 	
-	public ${bean.className}AddViewImpl(ExceptionMappingStrategy exceptionMappingStrategy) {
-		super(exceptionMappingStrategy);
+	public ${bean.className}AddViewImpl(ExceptionMappingStrategy exceptionMappingStrategy, Map<String, Object> context) {
+		super(exceptionMappingStrategy, context);
 	}
 	
 	@Override
