--- a/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinViewFactory.template
+++ b/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinViewFactory.template
@@ -19,7 +19,7 @@ the License.
 
 	@Override
 	public MainView createMainView() {
-		return new MainViewImpl();
+		return new MainViewImpl(context);
 	}
 
 	@Override
