--- a/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/EditViewImpl_commonVar.template
+++ b/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/EditViewImpl_commonVar.template
@@ -18,3 +18,5 @@ the License.
 	protected ExceptionMappingStrategy exceptionMappingStrategy = null;
 	
 	private Set<FieldInitializer> fieldInitializers = new HashSet<FieldInitializer>();
+	
+	protected Map<String, Object> context;
