--- a/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/ChangeViewImpl.template
+++ b/VaadinatorTooling/VaadinatorTemplatesDesktop/src/main/resources/de/akquinet/engineering/vaadinator/templates/ChangeViewImpl.template
@@ -15,6 +15,8 @@ the License.
 *#
 package ${package};
 
+import java.util.Map;
+
 import com.vaadin.ui.AbstractOrderedLayout;
 import com.vaadin.ui.Button;
 import com.vaadin.ui.Button.ClickEvent;
@@ -38,8 +40,8 @@ public class ${bean.className}ChangeViewImpl extends
 	protected Button cancel = new Button();
 	protected Button save = new Button();
 	
-	public ${bean.className}ChangeViewImpl(ExceptionMappingStrategy exceptionMappingStrategy) {
-		super(exceptionMappingStrategy);
+	public ${bean.className}ChangeViewImpl(ExceptionMappingStrategy exceptionMappingStrategy, Map<String, Object> context) {
+		super(exceptionMappingStrategy, context);
 	}
 	
 	@Override
