--- a/VaadinatorTooling/VaadinatorTemplatesTouchkit/src/main/resources/de/akquinet/engineering/vaadinator/templates/ListViewImpl.template
+++ b/VaadinatorTooling/VaadinatorTemplatesTouchkit/src/main/resources/de/akquinet/engineering/vaadinator/templates/ListViewImpl.template
@@ -17,6 +17,7 @@ package ${package};
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 #parse("/de/akquinet/engineering/vaadinator/templates/bundle_includes.template")
 
@@ -58,9 +59,12 @@ public class ${bean.className}ListViewImpl extends NavigationView implements ${b
 
 	protected ExceptionMappingStrategy exceptionMappingStrategy = null;
 
-	public ${bean.className}ListViewImpl(ExceptionMappingStrategy exceptionMappingStrategy) {
+	protected Map<String, Object> context = null;
+	
+	public ${bean.className}ListViewImpl(ExceptionMappingStrategy exceptionMappingStrategy, Map<String, Object> context) {
  		super();
 		this.exceptionMappingStrategy = exceptionMappingStrategy;
+		this.context = context;
  	}
  	
 #parse("/de/akquinet/engineering/vaadinator/templates/bundle_obtain.template")
