--- a/VaadinatorTooling/VaadinatorTemplatesTouchkit/src/main/resources/de/akquinet/engineering/vaadinator/templates/UI.template
+++ b/VaadinatorTooling/VaadinatorTemplatesTouchkit/src/main/resources/de/akquinet/engineering/vaadinator/templates/UI.template
@@ -15,6 +15,7 @@ the License.
 *#
 package ${common.basePackage};
 
+import java.util.Map;
 import java.util.HashMap;
 
 import javax.naming.InitialContext;
@@ -57,6 +58,8 @@ public class ${common.projectName}UI extends UI {
 	 */
 	private static final long serialVersionUID = 1L;
 
+	private Map<String, Object> context = new HashMap<String, Object>();
+	
 	@Override
 	protected void init(VaadinRequest request) {
 		NavigationManager m = new NavigationManager();
@@ -102,7 +105,7 @@ public class ${common.projectName}UI extends UI {
 			#end
 			#end
 			#end
-			presenterFactory = new PresenterFactory(new HashMap<String, Object>(), new VaadinViewFactory()
+			presenterFactory = new PresenterFactory(context, new VaadinViewFactory(context)
 			#foreach($bean in $common.beans)
 			#if($bean.displayed)
 			, ${bean.classNamePass}Service
