--- a/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinViewFactory_common.template
+++ b/VaadinatorTooling/VaadinatorTemplatesVaadin/src/main/resources/de/akquinet/engineering/vaadinator/templates/VaadinViewFactory_common.template
@@ -15,6 +15,8 @@ the License.
 *#
 package ${package};
 
+import java.util.Map;
+
 import ${common.basePackage}.ui.view.ExceptionMappingStrategy;
 import ${common.basePackage}.ui.view.DefaultExceptionMappingStrategy;
 import ${common.basePackage}.ui.view.FieldInitializer;
@@ -25,8 +27,11 @@ public class VaadinViewFactory implements ViewFactory {
 	
 	protected FieldInitializer commonFieldInitializer = null;
 	
-	public VaadinViewFactory() {
+	protected Map<String, Object> context = null;
+
+	public VaadinViewFactory(Map<String, Object> context) {
 		super();
+		this.context = context;
 	}
 
 #foreach($bean in $common.beans)
@@ -39,9 +44,9 @@ public ${bean.className}AddView create${bean.className}AddView() {
 	#end
 	
 	#if( $bean.getDisplayProfile($profileName).getExStrings().contains("ADD_VIEW_IMPL") )
-${bean.className}AddViewImplEx addViewImpl =  new ${bean.className}AddViewImplEx(exceptionMappingStrategy);
+${bean.className}AddViewImplEx addViewImpl =  new ${bean.className}AddViewImplEx(exceptionMappingStrategy, context);
 	#else
-${bean.className}AddViewImpl addViewImpl = new ${bean.className}AddViewImpl(exceptionMappingStrategy);
+${bean.className}AddViewImpl addViewImpl = new ${bean.className}AddViewImpl(exceptionMappingStrategy, context);
 	#end
 	if(commonFieldInitializer != null) {
 			addViewImpl.addFieldInitializer(commonFieldInitializer);
@@ -56,9 +61,9 @@ public ${bean.className}ChangeViewEx create${bean.className}ChangeView() {
 public ${bean.className}ChangeView create${bean.className}ChangeView() {
 	#end
 	#if( $bean.getDisplayProfile($profileName).getExStrings().contains("CHANGE_VIEW_IMPL") )
-    ${bean.className}ChangeViewImplEx changeViewImpl = new ${bean.className}ChangeViewImplEx(exceptionMappingStrategy);
+    ${bean.className}ChangeViewImplEx changeViewImpl = new ${bean.className}ChangeViewImplEx(exceptionMappingStrategy, context);
 	#else
-    ${bean.className}ChangeViewImpl changeViewImpl = new ${bean.className}ChangeViewImpl(exceptionMappingStrategy);
+    ${bean.className}ChangeViewImpl changeViewImpl = new ${bean.className}ChangeViewImpl(exceptionMappingStrategy, context);
 	#end	
 	if(commonFieldInitializer != null) {
 		changeViewImpl.addFieldInitializer(commonFieldInitializer);
@@ -73,9 +78,9 @@ public ${bean.className}ListViewEx create${bean.className}ListView() {
 public ${bean.className}ListView create${bean.className}ListView() {
 	#end
 	#if( $bean.getDisplayProfile($profileName).getExStrings().contains("LIST_VIEW_IMPL") )
-return new ${bean.className}ListViewImplEx(exceptionMappingStrategy);
+return new ${bean.className}ListViewImplEx(exceptionMappingStrategy, context);
 	#else
-return new ${bean.className}ListViewImpl(exceptionMappingStrategy);
+return new ${bean.className}ListViewImpl(exceptionMappingStrategy, context);
 	#end
 }
 #end
