Introduce Presenter.onContextChange()
A method which is called when the context map is changed. Cascades
through the presenters.

--- a/VaadinatorTooling/VaadinatorTemplatesMVP/src/main/resources/de/akquinet/engineering/vaadinator/templates/EditPresenterImpl.template
+++ b/VaadinatorTooling/VaadinatorTemplatesMVP/src/main/resources/de/akquinet/engineering/vaadinator/templates/EditPresenterImpl.template
@@ -124,5 +124,9 @@ public abstract class ${bean.className}EditPresenterImpl implements ${bean.class
 			returnPresenter.returnToThisPresener(this);
 		}
 	}
+	
+	@Override
+	public void onContextChange() {
+	}
 
 }
