--- a/VaadinatorTooling/VaadinatorTemplatesMVP/src/main/resources/de/akquinet/engineering/vaadinator/templates/Presenter.template
+++ b/VaadinatorTooling/VaadinatorTemplatesMVP/src/main/resources/de/akquinet/engineering/vaadinator/templates/Presenter.template
@@ -26,5 +26,7 @@ public interface Presenter extends Serializable {
 	public void startPresenting();
 
 	public void returnToThisPresener(Presenter fromPresenter);
+	
+	public void onContextChange();
 
 }
