--- a/VaadinatorExample/pom.xml
+++ b/VaadinatorExample/pom.xml
@@ -33,6 +33,7 @@ the License.
 			<modules>
 				<module>AddressbookExample</module>
 				<module>WebDriverExample</module>
+				<module>rwdpjExample</module>
 			</modules>
 		</profile>
 		<profile>
