--- a/VaadinatorExample/AddressbookExample/pom.xml
+++ b/VaadinatorExample/AddressbookExample/pom.xml
@@ -148,6 +148,22 @@ the License.
 			</resource>
 		</resources>
 		<plugins>
+		        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source> <!-- or higher, depending on your project -->
+                <target>1.8</target> <!-- or higher, depending on your project -->
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>de.akquinet.engineering.vaadin.vaadinator</groupId>
+						<artifactId>VaadinatorGenerator</artifactId>
+						<version>0.20-SNAPSHOT</version>
+                    </path>
+                </annotationProcessorPaths>
+            </configuration>
+        </plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
